# mrapi-dev

./: .gitmodules
mrapi-base/: pyproject.toml
mrapi-papers/a_pipeline_for_800_shots/: sources.toml
mrapi-papers/building_modern_vfx_infrastructure/: sources.toml
